-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 14.0.2, Qt Creator 16.0.0
-
None
-
0142ff8d5 (master)
Given the following snippet:
template <typename T>
void foo() {
static_assert(sizeof(T) > 0, "incomplete type");
}
When: placing the cursor after the , and hitting return
Then: the following line is indented 8 SP w.r..t to the static_assert:
Not even CTRL-I will change that.
Expected: indented to one after the opening ( of the static_assert:
Rationale: If it looks like a function, it should be formatted like a function. If I change static_assert to a function, it indents as expected:
- relates to
-
QTCREATORBUG-32666 QtC misindents body of constexpr-if
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-32667 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 636394,2 | CppEditor: Treat some function-like built-ins like functions | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |