CppEditor: Treat some function-like built-ins like functions

... for indenting purposes.

Fixes: QTCREATORBUG-32667
Change-Id: I5fd3681fc9fdc1590eb1d2af148fc59f423f31e6
Reviewed-by: David Schulz <david.schulz@qt.io>