tests/auto/cplusplus/codeformatter/tst_codeformatter.cpp
@@ -109,6 +109,7 @@ private Q_SLOTS:
     void lambdaWithReturnType();
     void structuredBinding();
     void subscriptOperatorInFunctionCall();
+    void pseudoFunctionCall();
     void statementMacros();
     void tryCatchClause();
 };
@@ -2224,6 +2225,18 @@ void tst_CodeFormatter::subscriptOperatorInFunctionCall()
          << Line("    ~    0);")
          << Line("    func(array[i],")
          << Line("    ~    i);")
+         << Line("}")
+        ;
+    checkIndent(data);
+}
+
+void tst_CodeFormatter::pseudoFunctionCall()
+{
+    QList<Line> data;
+    data << Line("template <typename T>")
+         << Line("void foo() {")
+         << Line("    static_assert(sizeof(T) > 0,")
+         << Line("    ~             \"incomplete type\");")
          << Line("}")
         ;
     checkIndent(data);
